# timefm-trader

./: .env.example  .gitignore  Makefile  README.md  main.py  pyproject.toml  requirements.txt
docs/superpowers/specs/: 2026-05-01-timefm-crypto-trader-design.md
src/timefm_trader/: bot.py  config.py  dashboard.py  executor.py  fetcher.py  forecaster.py  indicators.py  models.py  portfolio.py  signal.py  web.py
static/: index.html
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_bot.py  test_dashboard.py  test_executor.py  test_fetcher.py  test_forecaster.py  test_indicators.py  test_portfolio.py  test_signal.py
